lavf/rawdec: Return a low score if the mjpeg probe function detected one frame.

Fixes ticket #9026.