libavformat/rawdec.c
@@ -208,6 +208,8 @@ static int mjpeg_probe(const AVProbeData *p)
             return AVPROBE_SCORE_EXTENSION / 2;
         return AVPROBE_SCORE_EXTENSION / 4;
     }
+    if (!nb_invalid && nb_frames)
+        return AVPROBE_SCORE_EXTENSION / 4;
 
     return 0;
 }
